# q-alchemy-sdk-py

./: .gitignore  LICENSE  README.md  azure-pipelines.yml  loss.npy  params.npy  pyproject.toml
.github/workflows/: build-and-publish.yaml
baa_sdk/: __init__.py  client.py  models.py
examples/: End-to-End Qiskit Demo MNIST784.ipynb  End-to-End Qiskit Demo.ipynb  PennyLane_Example.ipynb  Quantum Chemistry VQE.ipynb  Quantum Chemsitry Energy Behavior.ipynb  Simplest_Example.ipynb  Trace Distance with MNIST784.ipynb  baa_sdk_example.ipynb  batch_initialization_pennylane.ipynb  batch_initialization_qiskit.ipynb  broadcasting_example.ipynb  create_a_job_example.ipynb  data.py  hhl_circuit_depth.ipynb  hhl_demo.ipynb  hhl_experiment.py  hhl_real_final copy.ipynb  live_demo_website.ipynb  live_demo_website_with_circuits.ipynb  portfolio_demo.ipynb  qccn.py  qcnn_demo.ipynb  qcnn_with_ibm.ipynb  qiskit_to_pennylane.ipynb  query_jobs_example.ipynb  simple_example_pennylane.ipynb  simple_example_qiskit.ipynb  test.py
examples/HHL Example/: hhl_circuit_depth.ipynb  hhl_demo.ipynb  library.py
examples/HHL Example/hhl_data/: hhl_qalchemy_results_0_1.00.csv
examples/QCNN Example/: qcnn_demo.ipynb  qcnn_with_ibm.ipynb
examples/code examples for export mode/: prepare to transform MNIST784.py
examples/hhl_data/: hhl_qalchemy_results.csv  hhl_qalchemy_results_0.01.csv  trial_solution.npy  trial_solution_0.01.npy
examples/quikstart_x_2025/: schmidt_classifier.ipynb  schmidt_classifier.py  simple_example.ipynb
q_alchemy/: circuit_compiler.py  client.py  models.py  qiskit.py  qiskit_to_pennylane.py  random_circuits.py
q_alchemy_sdk/: __init__.py  client.py  models.py
src/hypermedia_client/: __init__.py
src/hypermedia_client/core/: __init__.py  base_relations.py  enterapi.py  exceptions.py  http_headers.py  media_types.py  polling.py  resilience_handling.py  sirenaccess.py
src/hypermedia_client/core/hco/: action_hco.py  action_with_parameters_hco.py  download_link_hco.py  hco_base.py  link_hco.py  upload_action_hco.py
src/hypermedia_client/core/model/: error.py  sirenmodels.py
src/hypermedia_client/job_management/: __init__.py  enterjma.py  known_relations.py
src/hypermedia_client/job_management/hcos/: __init__.py  entrypoint_hco.py  info_hco.py  input_dataslot_hco.py  job_hco.py  job_query_result_hco.py  job_used_tags_hco.py  jobsroot_hco.py  output_dataslot_hco.py  processing_step_hco.py  processing_step_used_tags_hco.py  processingstep_query_result_hco.py  processingsteproot_hco.py  user_hco.py  workdata_hco.py  workdata_query_result_hco.py  workdata_used_tags_hco.py  workdata_used_tags_query_result_hco.py  workdataroot_hco.py
src/hypermedia_client/job_management/model/: __init__.py  open_api_generated.py  sirenentities.py
src/hypermedia_client/job_management/tool/: __init__.py  job.py
src/q_alchemy/: __init__.py  initialize.py  pennylane_integration.py  pyarrow_data.py  qiskit_integration.py  qiskit_to_pennylane.py  utils.py
src/q_alchemy/parser/: qasm_pennylane.py
src/q_alchemy_sdk_py/: qiskit.py
tests/: __init__.py  api_call_test.py  test_data_upload.py  test_initialize.py  test_parser_qasm_pennylane_qasm.py  test_pennylane_integration.py  test_qiskit_integration.py  to_circuit_test.py
tests/data/: test.qasm  test_baa_state.10.1.npy  test_baa_state.12.1.npy  test_baa_state.7.1.npy
