[tool.pdm]
distribution = true

[tool.pdm.build]
includes = [
    "src/hypermedia_client",
    "src/q_alchemy",
]

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[project]
name = "q-alchemy-sdk-py"
version = "0.2.10"
description = ""
authors = [
    { name = "Carsten Blank", email = "blank@data-cybernetics.com" },
]
dependencies = [
    "pydantic>=2.6.4",
    "httpx<1.0.0,>=0.25.0",
    "tenacity>=8.2.3",
    "pinexq-client>=0.3.0.20240620.2",
    "tqdm"
]
requires-python = "<4,>=3.11"
readme = "README.md"

[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "jupyter",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "tqdm"
]

[project.optional-dependencies]
qiskit = ["qiskit>=1.0.2"]
pennylane = ["pennylane>=0.35.1", "openqasm3[parser]"]
examples = ["qiskit>=1.0.2", "pennylane>=0.35.1", "openqasm3[parser]", "qutip"]

[project.license]
text = "Apache"
