
[tool.pdm]
distribution = true

[tool.pdm.build]
includes = [
    "src/hypermedia_client",
    "src/q_alchemy",
]

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[project]
name = "q-alchemy-sdk-py"
version = "0.2.23"
description = ""
authors = [
    { name = "Carsten Blank", email = "blank@data-cybernetics.com" },
]
dependencies = [
    "pydantic>=2.6.4",
    "httpx<1.0.0,>=0.25.0",
    "tenacity>=8.2.3",
    "pinexq-client>=0.9.2.20250828.47",
    "tqdm",
    "pyarrow>=19.0.1",
]
requires-python = "<4,>=3.11"
readme = "README.md"

[dependency-groups]
dev = [
    "pytest",
    "python-dotenv",
    "pytest",
    "pytest-dotenv",
    "notebook>=7.4.5",
    "pip>=25.2",
    "scipy-stubs>=1.16.1.1",
    "qiskit[qasm3-import]"
]

[project.optional-dependencies]
qiskit = ["qiskit[qasm3-import]>=1.2.0,<2.0"]
pennylane = ["pennylane>=0.41.1", "openqasm3[parser]","pennylane-qiskit>=0.41.0"]
examples = [
    "qiskit>=1.2.0,<2.0",
    "pennylane>=0.41.1",
    "pennylane-qiskit>=0.41.0",
    "openqasm3[parser]",
    "qutip",
    "pylatexenc",
    "qiskit_experiments",
    "qiskit_aer",
    "jupyter",
    "matplotlib",
    "pandas",
    "scikit-learn"
]

[project.license]
text = "Apache"

